# undataset

./: README.md  pyproject.toml  setup.py  test.py  test.sh
docs/formats/: coco.md
examples/: visdrone.py  voc.py
tests/: test_basic_ops.py  visdrone.py
undata/: __init__.py  bbox_converter.py  evaluator.py  plotter.py  unbbox.py  undataset.py  unsample.py  untypes.py
undata/converters/: __init__.py  base.py  voc.py  voc_reader.py  voc_writer.py  yolo.py  yolo_reader.py  yolo_writer.py
undata/datasets/od/: __init__.py  evaluator.py  oddataset.py  odsample.py  plotter.py  voc_reader.py  voc_writer.py  yolo_reader.py  yolo_writer.py
undata/helpers/: bbox_converter.py  map_merger.py
