[tool.setuptools.packages.find]
include = ["undata*"]
exclude = ["tests*", "test_datasets*"]


[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undata"
version = "0.1.0"
description = "A dataset management tool"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas>=2.0",
    "pillow",
    "pydantic>=2.0",
    "pyyaml",
    "tqdm",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
